--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,76 @@
 <header class="header">
-  <div class="header__container">
-  </div>
+    <div class="header__top">
+        <div class="header-container">
+            <div class="header__top-body">
+                <a href="#" class="header__logo">
+                    <picture class="lazy image--contain">
+                        <img data-src="@img/global/logo.svg" class="image lazy__item" alt="">
+                    </picture>
+                </a>
+                <ul class="header__adress">
+                    <li>
+                        <span>Пн-сб: 10:00-20:00, вс - выходной</span>
+                    </li>
+                    <li>
+                        <span>г. Санкт-Петербург, пр-т. Просвещения, 23а</span>
+                        <a href="#">
+                            <span class="icon">
+                                <svg>
+                                    <use xlink:href="@img/icons/sprite.svg#location"></use>
+                                </svg>
+                            </span>
+                            <span>Все клиники</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="header__actions">
+                    <a href="#" class="link" target="_blank" rel="noopener noreferrer nofollow" title="Наш Whatsapp">
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#wa"></use>
+                            </svg>
+                        </span>
+                        <span>Связаться в Whatsapp</span>
+                    </a>
+                    <a href="tel:+78127700808" class="header__phone">+7 (812) 770-08-08</a>
+                    <button type="button" class="link">Заказать обратный звонок</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header__bottom">
+        <div class="header-container">
+            <div class="header__bottom-body">
+                <a href="#" class="link-services">
+                    <span class="icon">
+                        <svg>
+                            <use xlink:href="@img/icons/sprite.svg#burger"></use>
+                        </svg>
+                    </span>
+                    <span>Услуги</span>
+                </a>
+                <div class="header__menu menu">
+                    <nav class="menu__body">
+                        <ul class="menu__list">
+                            <li><a href="#">О клинике</a></li>
+                            <li><a href="#">Цены</a></li>
+                            <li><a href="#">Врачи</a></li>
+                            <li><a href="#">Фото работ</a></li>
+                            <li><a href="#">Акции</a></li>
+                            <li><a href="#">Отзывы</a></li>
+                            <li><a href="#">Блог</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <button type="submit" class="btn-search">
+                    <svg>
+                        <use xlink:href="@img/icons/sprite.svg#search"></use>
+                    </svg>
+                </button>
+                <button class="btn-call">записаться на прием</button>
+                <button type="button" class="menu__icon icon-menu"><span></span></button>
+            </div>
+        </div>
+    </div>
 </header>
