Закончил страницы услуг о компании специалистов сертификаты

--- a/src/index.html
+++ b/src/index.html
@@ -18,18 +18,22 @@
                         <h2>Основные страницы</h2>
                         <ol>
                             <li><a href="page-home.html" target="_blank">Главная</a></li>
+                            <li><a href="page-certificats.html" target="_blank">О клинике</a></li>
                         </ol>
                     </div>
 
                     <div class="root-page__col">
                         <h2>Каталожные страницы</h2>
                         <ol>
+                            <li><a href="page-services-archive.html" target="_blank">Услуги</a></li>
+                            <li><a href="page-experts-archive.html" target="_blank">Наши врачи</a></li>
                         </ol>
                     </div>
 
                     <div class="root-page__col">
                         <h2>Внутренние страницы</h2>
                         <ol>
+                            <li><a href="page-experts-single.html" target="_blank">Карточка врача</a></li>
                         </ol>
                     </div>
 
