Закончил главную страницу с адаптивом

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -2,103 +2,106 @@
     <div class="footer__wrapper">
         <div class="footer-container">
             <div class="footer__body">
-                <div class="footer__logo">
-                    <a href="#">
-                        <picture class="lazy image--cover">
-                            <img data-src="@img/footer-logo.svg" class="image lazy__item" alt="">
-                        </picture>
-                    </a>
-                    <ul class="branches__list">
-                        <li>
-                            <span class="name">Центральная клиника:</span>
-                            <span class="adress">г. Санкт-Петербург, пр. Просвещения, 23а</span>
-                        </li>
-                        <li>
-                            <span class="name">Ортодонтический центр:</span>
-                            <span class="adress">г. Санкт-Петербург,Приморский пр-т, 137, к. 1</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__contacts">
-                    <div class="footer__works">
-                        Мы работаем: <br>
-                        Пн-Сб: 10:00-20:00, <br>
-                        Вс - выходной
-                    </div>
-                    <div class="footer__call">
-                        <div class="footer__box">
-                            <span>Call-центр:</span> <a href="tel:88127700808">8 (812) 770-08-08</a>
-                        </div>
-                        <a href="#" class="link-white">Заказать обратный звонок</a>
-                    </div>
-                    <div class="footer__actions">
-                        <button type="submit" class="btn-form btn-white">Получть консультацию</button>
-                        <span class="name">Консультация:</span>
-                        <ul class="footer__social">
+                <div class="footer__flex">
+                    <div class="footer__logo">
+                        <a href="#">
+                            <picture class="lazy image--cover">
+                                <img data-src="@img/footer-logo.svg" class="image lazy__item" alt="">
+                            </picture>
+                        </a>
+                        <ul class="branches__list">
                             <li>
-                                <a href="#">
-                                    <span class="icon">
-                                        <svg>
-                                            <use xlink:href="@img/icons/sprite.svg#tg"></use>
-                                        </svg>
-                                    </span>
-                                    <span>Telegram</span>
-                                </a>
+                                <span class="name">Центральная клиника:</span>
+                                <span class="adress">г. Санкт-Петербург, пр. Просвещения, 23а</span>
                             </li>
                             <li>
-                                <a href="#">
-                                    <span class="icon">
-                                        <svg>
-                                            <use xlink:href="@img/icons/sprite.svg#wa"></use>
-                                        </svg>
-                                    </span>
-                                    <span>Whatsapp</span>
-                                </a>
+                                <span class="name">Ортодонтический центр:</span>
+                                <span class="adress">г. Санкт-Петербург,Приморский пр-т, 137, к. 1</span>
                             </li>
                         </ul>
                     </div>
+                    <div class="footer__contacts">
+                        <div class="footer__works">
+                            Мы работаем: <br>
+                            Пн-Сб: 10:00-20:00, <br>
+                            Вс - выходной
+                        </div>
+                        <div class="footer__call">
+                            <div class="footer__box">
+                                <span>Call-центр:</span> <a href="tel:88127700808">8 (812) 770-08-08</a>
+                            </div>
+                            <a href="#" class="link-white">Заказать обратный звонок</a>
+                        </div>
+                        <div class="footer__actions">
+                            <button type="submit" class="btn-form btn-white">Записаться</button>
+                            <span class="name">Консультация:</span>
+                            <ul class="footer__social">
+                                <li>
+                                    <a href="#">
+                                        <span class="icon">
+                                            <svg>
+                                                <use xlink:href="@img/icons/sprite.svg#tg"></use>
+                                            </svg>
+                                        </span>
+                                        <span>Telegram</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="icon">
+                                            <svg>
+                                                <use xlink:href="@img/icons/sprite.svg#wa"></use>
+                                            </svg>
+                                        </span>
+                                        <span>Whatsapp</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="footer__menu">
-                    <span class="name">Услуги</span>
-                    <ul class="footer__list">
-                        <li><a href="#">Диагностика</a></li>
-                        <li><a href="#">Профессиональная гигиена</a></li>
-                        <li><a href="#">Хирургия и имплантация</a></li>
-                        <li><a href="#">Терапевтическая стоматология</a></li>
-                        <li><a href="#">Ортопедия</a></li>
-                        <li><a href="#">Пародонтология</a></li>
-                        <li><a href="#">Ортодонтия</a></li>
-                        <li><a href="#">Анестезиология</a></li>
-                    </ul>
+                <div class="footer__grid">
+                    <div class="footer__menu">
+                        <span class="name">Услуги</span>
+                        <ul class="footer__list">
+                            <li><a href="#">Диагностика</a></li>
+                            <li><a href="#">Профессиональная гигиена</a></li>
+                            <li><a href="#">Хирургия и имплантация</a></li>
+                            <li><a href="#">Терапевтическая стоматология</a></li>
+                            <li><a href="#">Ортопедия</a></li>
+                            <li><a href="#">Пародонтология</a></li>
+                            <li><a href="#">Ортодонтия</a></li>
+                            <li><a href="#">Анестезиология</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__menu">
+                        <span class="name">О клинике</span>
+                        <ul class="footer__list">
+                            <li><a href="#">Лицензия и сертификаты</a></li>
+                            <li><a href="#">Возврат 13% НДФЛ</a></li>
+                            <li><a href="#">Виды оплаты</a></li>
+                            <li><a href="#">Положение об оплате</a></li>
+                            <li><a href="#">Положение о гарантиях</a></li>
+                            <li><a href="#">Правила поведения пациентов и посетителей</a></li>
+                            <li><a href="#">Договор об оказании платных медицинскийх услуг</a></li>
+                            <li><a href="#">Фотогалерея</a></li>
+                            <li><a href="#">Как добраться</a></li>
+                            <li><a href="#">График приёма Главврача</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__menu">
+                        <span class="name">Информация</span>
+                        <ul class="footer__list">
+                            <li><a href="#">Врачи</a></li>
+                            <li><a href="#">Цены</a></li>
+                            <li><a href="#">Фото работ</a></li>
+                            <li><a href="#">Акции</a></li>
+                            <li><a href="#">Отзывы</a></li>
+                            <li><a href="#">Блог</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="footer__menu">
-                    <span class="name">О клинике</span>
-                    <ul class="footer__list">
-                        <li><a href="#">Лицензия и сертификаты</a></li>
-                        <li><a href="#">Возврат 13% НДФЛ</a></li>
-                        <li><a href="#">Виды оплаты</a></li>
-                        <li><a href="#">Положение об оплате</a></li>
-                        <li><a href="#">Положение о гарантиях</a></li>
-                        <li><a href="#">Правила поведения пациентов и посетителей</a></li>
-                        <li><a href="#">Договор об оказании платных медицинскийх услуг</a></li>
-                        <li><a href="#">Фотогалерея</a></li>
-                        <li><a href="#">Как добраться</a></li>
-                        <li><a href="#">График приёма Главврача</a></li>
-                    </ul>
-                </div>
-                <div class="footer__menu">
-                    <span class="name">Информация</span>
-                    <ul class="footer__list">
-                        <li><a href="#">Врачи</a></li>
-                        <li><a href="#">Цены</a></li>
-                        <li><a href="#">Фото работ</a></li>
-                        <li><a href="#">Акции</a></li>
-                        <li><a href="#">Отзывы</a></li>
-                        <li><a href="#">Блог</a></li>
-                        <li><a href="#">Контакты</a></li>
-                    </ul>
-                </div>
-
             </div>
         </div>
     </div>
