--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,15 @@
                     <div class="root-page__col">
                         <h2>Каталожные страницы</h2>
                         <ol>
-                            <li><a href="page-services-archive.html" target="_blank">Услуги</a></li>
-                            <li><a href="page-experts-archive.html" target="_blank">Наши врачи</a></li>
+                            <li><a href="page-services-archive.html" target="_blank">Услуги архивная</a></li>
+                            <li><a href="page-experts-archive.html" target="_blank">Наши врачи архивная</a></li>
                         </ol>
                     </div>
 
                     <div class="root-page__col">
                         <h2>Внутренние страницы</h2>
                         <ol>
+                            <li><a href="page-services-single.html" target="_blank">Услуга детальная</a></li>
                             <li><a href="page-experts-single.html" target="_blank">Карточка врача</a></li>
                         </ol>
                     </div>
