--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,10 +1,11 @@
-<header class="header">
+<header class="header" data-scroll="517" data-scroll-show data-lp>
     <div class="header__top">
         <div class="header-container">
             <div class="header__top-body">
                 <a href="#" class="header__logo">
                     <picture class="lazy image--contain">
-                        <img data-src="@img/global/logo.svg" class="image lazy__item" alt="">
+                        <source srcset="@img/global/logo-mobile.png" media="(max-width: 1024px)">
+                        <img data-src="@img/global/logo.png" class="image lazy__item" alt="">
                     </picture>
                 </a>
                 <ul class="header__adress">
@@ -12,29 +13,35 @@
                         <span>Пн-сб: 10:00-20:00, вс - выходной</span>
                     </li>
                     <li>
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#location"></use>
+                            </svg>
+                        </span>
                         <span>г. Санкт-Петербург, пр-т. Просвещения, 23а</span>
-                        <a href="#">
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#location"></use>
-                                </svg>
-                            </span>
-                            <span>Все клиники</span>
-                        </a>
                     </li>
                 </ul>
                 <div class="header__actions">
-                    <a href="#" class="link" target="_blank" rel="noopener noreferrer nofollow" title="Наш Whatsapp">
+                    <a href="https://wa.me/78127700808" class="link" target="_blank" rel="noopener noreferrer nofollow"
+                        title="Наш Whatsapp">
                         <span class="icon">
                             <svg>
                                 <use xlink:href="@img/icons/sprite.svg#wa"></use>
                             </svg>
                         </span>
-                        <span>Связаться в Whatsapp</span>
+                        <span class="text">Связаться в Whatsapp</span>
                     </a>
-                    <a href="tel:+78127700808" class="header__phone">+7 (812) 770-08-08</a>
-                    <button type="button" class="link">Заказать обратный звонок</button>
+                    <a href="tel:+78127700808" class="header__phone">
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#phone"></use>
+                            </svg>
+                        </span>
+                        <span class="text">+7 (812) 770-08-08</span>
+                    </a>
                 </div>
+                <button type="button" class="btn-form">Записаться на прием</button>
+                <button type="button" class="menu__icon icon-menu"><span></span></button>
             </div>
         </div>
     </div>
@@ -52,14 +59,34 @@
                 <div class="header__menu menu">
                     <nav class="menu__body">
                         <ul class="menu__list">
-                            <li><a href="#">О клинике</a></li>
-                            <li><a href="#">Цены</a></li>
-                            <li><a href="#">Врачи</a></li>
-                            <li><a href="#">Фото работ</a></li>
-                            <li><a href="#">Акции</a></li>
-                            <li><a href="#">Отзывы</a></li>
-                            <li><a href="#">Блог</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li>
+                                <a href="#">
+                                    <span>О клинике</span>
+                                    <span class="arrow">
+                                        <svg>
+                                            <use xlink:href="@img/icons/sprite.svg#arrow"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                                <ul class="sub-menu">
+                                    <li><a href=""><span>Лицензия и сертификаты</span></a></li>
+                                    <li><a href=""><span>Возврат 13% НДФЛ</span></a></li>
+                                    <li><a href=""><span>Виды оплаты</span></a></li>
+                                    <li><a href=""><span>Положение об оплате</span></a></li>
+                                    <li><a href=""><span>Положение о гарантиях</span></a></li>
+                                    <li><a href=""><span>Правила поведения пациентови посетителей</span></a></li>
+                                    <li><a href=""><span>Договор об оказании платных мед.услуг</span></a></li>
+                                    <li><a href=""><span>Как добраться</span></a></li>
+                                    <li><a href=""><span>График приема пациентов</span></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#"><span>Цены</span></a></li>
+                            <li><a href="#"><span>Врачи</span></a></li>
+                            <li><a href="#"><span>Фото работ</span></a></li>
+                            <li><a href="#"><span>Акции</span></a></li>
+                            <li><a href="#"><span>Отзывы</span></a></li>
+                            <li><a href="#"><span>Блог</span></a></li>
+                            <li><a href="#"><span>Контакты</span></a></li>
                         </ul>
                     </nav>
                 </div>
@@ -69,8 +96,214 @@
                     </svg>
                 </button>
                 <button class="btn-call">записаться на прием</button>
-                <button type="button" class="menu__icon icon-menu"><span></span></button>
+
             </div>
         </div>
     </div>
 </header>
+
+<div class="mobile-menu">
+    <div class="menu-mobile__overlay"></div>
+    <div class="menu-mobile">
+        <div class="menu-mobile__header">
+            <span class="name">меню</span>
+            <button type="button" class="close">
+                <span class="icon">
+                    <svg>
+                        <use xlink:href="@img/icons/sprite.svg#close"></use>
+                    </svg>
+                </span>
+            </button>
+        </div>
+        <nav class="menu-mobile__body">
+            <ul class="menu-mobile__list">
+                <li>
+                    <a href="">
+                        <span>ЛЕЧЕНИЕ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Лечение кариеса</span></a></li>
+                        <li><a href=""><span>лечение пульпита</span></a></li>
+                        <li><a href=""><span>лечение периодонтита</span></a></li>
+                        <li><a href=""><span>лечение кисты зуба</span></a></li>
+                        <li><a href=""><span>пломбирование зубов</span></a></li>
+                        <li><a href=""><span>пломбирование каналов</span></a></li>
+                        <li><a href=""><span>лечение под микроскопом</span></a></li>
+                        <li><a href=""><span>эндодонтия</span></a></li>
+                        <li><a href=""><span>перелечивание зуба</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <span>УДАЛЕНИЕ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Удаление зуба мудрости</span></a></li>
+                        <li><a href=""><span>Удаление ретинированного зуба</span></a></li>
+                        <li><a href=""><span>Удаление подвижного зуба</span></a></li>
+                        <li><a href=""><span>Реплантация зубов</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ПРОТЕЗИРОВАНИЕ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Протезирование зубов на имплантатах</span></a></li>
+                        <li><a href=""><span>Акриловые протезы</span></a></li>
+                        <li><a href=""><span>Бюгельные протезы</span></a></li>
+                        <li><a href=""><span>Мостовидные протезы</span></a></li>
+                        <li><a href=""><span>Съемные зубные протезы</span></a></li>
+                        <li><a href=""><span>Временные коронки на имплантатах</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <span>КОРОНКИ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Пластмассовые (временные) коронки</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ВИНИРЫ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Композитные виниры</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ИМПЛАНТАЦИЯ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Имплантация All-on-4</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <span>КОСТНАЯ И ДЕСНЕВАЯ ПЛАСТИКА ПРИ ИМПЛАНТАЦИИ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Открытый синуслифтинг</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ПАРОДОНТОЛОГИЯ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Лечение пародонтита</span></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ОРТОДОНТИЯ</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Исправление прикуса</span></a></li>
+                    </ul>
+                </li>
+
+            </ul>
+        </nav>
+        <nav class="menu-mobile__body">
+            <ul class="menu-mobile__list">
+                <li>
+                    <a href="">
+                        <span>О клинике</span>
+                        <span class="arrow">
+                            <svg>
+                                <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a href=""><span>Лицензия и сертификаты</span></a></li>
+                        <li><a href=""><span>Возврат 13% НДФЛ</span></a></li>
+                        <li><a href=""><span>Виды оплаты</span></a></li>
+                        <li><a href=""><span>Положение об оплате</span></a></li>
+                        <li><a href=""><span>Положение о гарантиях</span></a></li>
+                        <li><a href=""><span>Правила поведения пациентов и посетителей</span></a></li>
+                        <li><a href=""><span>Договор об оказании платных мед.услуг</span></a></li>
+                        <li><a href=""><span>Как добраться</span></a></li>
+                        <li><a href=""><span>График приема пациентов</span></a></li>
+                    </ul>
+                </li>
+                <li><a href=""><span>Цены</span></a></li>
+                <li><a href=""><span>Врачи</span></a></li>
+                <li><a href=""><span>фото работ</span></a></li>
+                <li><a href=""><span>акции</span></a></li>
+                <li><a href=""><span>отзывы</span></a></li>
+                <li><a href=""><span>блог</span></a></li>
+                <li><a href=""><span>контакты</span></a></li>
+            </ul>
+        </nav>
+        <div class="menu-mobile__contacts">
+            <a href="https://wa.me/78127700808" class="link" target="_blank" rel="noopener noreferrer nofollow"
+                title="Наш Whatsapp">
+                <span class="icon">
+                    <svg>
+                        <use xlink:href="@img/icons/sprite.svg#wa"></use>
+                    </svg>
+                </span>
+                <span class="text">Связаться в Whatsapp</span>
+            </a>
+            <a href="tel:+78127700808" class="header__phone">
+                <span class="icon">
+                    <svg>
+                        <use xlink:href="@img/icons/sprite.svg#phone"></use>
+                    </svg>
+                </span>
+                <span class="text">+7 (812) 770-08-08</span>
+            </a>
+            <button type="button" class="link">Заказать обратный звонок</button>
+        </div>
+    </div>
+</div>
