Сделал текстовые страницы, контакты, как добраться, отзывы, цены

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,13 @@
                         <ol>
                             <li><a href="page-home.html" target="_blank">Главная</a></li>
                             <li><a href="page-certificats.html" target="_blank">О клинике</a></li>
+                            <li><a href="page-how-to-get.html" target="_blank">Как добраться</a></li>
+                            <li><a href="page-price.html" target="_blank">Цены</a></li>
+                            <li><a href="page-default.html" target="_blank">Текстовая страница (ндфл 13, виды оплат,
+                                    положения, договор, политика)</a></li>
+                            <li><a href="page-contacts.html" target="_blank">Контакты</a></li>
+                            <li><a href="page-reviews.html" target="_blank">Отзывы</a></li>
+                            <li><a href="page-sales-archive.html" target="_blank">Акции</a></li>
                         </ol>
                     </div>
 
@@ -26,6 +33,7 @@
                         <h2>Каталожные страницы</h2>
                         <ol>
                             <li><a href="page-services-archive.html" target="_blank">Услуги архивная</a></li>
+                            <li><a href="page-services-category.html" target="_blank">Услуга категория</a></li>
                             <li><a href="page-experts-archive.html" target="_blank">Наши врачи архивная</a></li>
                         </ol>
                     </div>
@@ -33,7 +41,6 @@
                     <div class="root-page__col">
                         <h2>Внутренние страницы</h2>
                         <ol>
-                            <li><a href="page-services-single.html" target="_blank">Услуга детальная</a></li>
                             <li><a href="page-experts-single.html" target="_blank">Карточка врача</a></li>
                         </ol>
                     </div>
