--- a/src/page-sales-archive.html
+++ b/src/page-sales-archive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('html/_head.htm',{
-"title":"Наши врачи"
+"title":"Акции"
 })
 
 <body>
@@ -9,12 +9,13 @@
         @@include('html/_header.htm',{})
         <main class="page">
             @@include('html/components/_breadcrumbs.htm',{
-            "title":"Наши врачи"
+            "title":"Акции"
             })
-            @@include('html/components/_experts.htm',{})
-            @@include('html/components/_feedback.htm',{})
-            @@include('html/components/_main-contacts.htm',{})
+            @@include('html/components/_page-sales.htm',{
+            "title":"Акции"
+            })
         </main>
+
         @@include('html/_footer.htm',{})
     </div>
     @@include('html/_js.htm',{})
