--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                                     положения, договор, политика)</a></li>
                             <li><a href="page-contacts.html" target="_blank">Контакты</a></li>
                             <li><a href="page-reviews.html" target="_blank">Отзывы</a></li>
-                            <li><a href="page-sales-archive.html" target="_blank">Акции</a></li>
+                            <li><a href="page-works.html" target="_blank">Фото работ</a></li>
                         </ol>
                     </div>
 
@@ -35,6 +35,8 @@
                             <li><a href="page-services-archive.html" target="_blank">Услуги архивная</a></li>
                             <li><a href="page-services-category.html" target="_blank">Услуга категория</a></li>
                             <li><a href="page-experts-archive.html" target="_blank">Наши врачи архивная</a></li>
+                            <li><a href="page-sales-archive.html" target="_blank">Акции архивная</a></li>
+                            <li><a href="page-news-archive.html" target="_blank">Новости архивная</a></li>
                         </ol>
                     </div>
 
@@ -42,12 +44,16 @@
                         <h2>Внутренние страницы</h2>
                         <ol>
                             <li><a href="page-experts-single.html" target="_blank">Карточка врача</a></li>
+                            <li><a href="page-sales-single.html" target="_blank">Акция детальная</a></li>
+                            <li><a href="page-news-single.html" target="_blank">Новости детальная</a></li>
                         </ol>
                     </div>
 
                     <div class="root-page__col">
                         <h2>Другие страницы</h2>
                         <ol>
+                            <li><a href="page-404.html" target="_blank">404</a></li>
+                            <li><a href="page-search.html" target="_blank">Поиск</a></li>
                         </ol>
                     </div>
                 </div>
