--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -28,3 +28,141 @@
         </div>
     </div>
 </dialog>
+
+<dialog id="call" style="display:none;">
+    <div class="popup-call__body">
+        <div class="popup-call__title">запишитесь на прием</div>
+        <form>
+            <div class="form__body">
+                <div class="form__row">
+                    <label>
+                        <span class="label">Как к вам обращаться?</span>
+                        <input type="text" name="name" placeholder="Ваше имя" class="input" required>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Контактный телефон</span>
+                        <input type="tel" name="phone" placeholder="+7 (___) ___-__-__" class="input" required>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Выберите услугу</span>
+                        <select name="form[]" data-class-modif="form">
+                            <option value="1" selected>Выбрать</option>
+                            <option value="2">Пункт №2</option>
+                            <option value="3">Пункт №3</option>
+                            <option value="4">Пункт №4</option>
+                        </select>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Выберите дату</span>
+                        <div class="wrapper-data">
+                            <input data-datepicker type="text" name="" class="input " placeholder="Выбрать">
+                        </div>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Выберите время</span>
+                        <select name="form[]" data-class-modif="form">
+                            <option value="1" selected>Выбрать</option>
+                            <option value="2">Пункт №2</option>
+                            <option value="3">Пункт №3</option>
+                            <option value="4">Пункт №4</option>
+                        </select>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Комментарий</span>
+                        <textarea class="input" placeholder="Ваш текст"></textarea>
+                    </label>
+                </div>
+
+
+                <div class="form__row">
+                    <div class="form-consent">
+                        <label class="custom-checkbox">
+                            <input type="checkbox" name="personal_data_agreement" required>
+                            <span class="checkbox-box"></span>
+                            <span class="checkbox-text">
+                                Нажимая на кнопку «Записаться на прием», вы соглашаетесь на <a href="#"
+                                    target="_blank">обработку
+                                    персональных данных.</a>
+                            </span>
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn-form btn-white">Записаться на прием</button>
+            </div>
+        </form>
+    </div>
+</dialog>
+
+<dialog id="call-service" style="display:none;">
+    <div class="popup-call__body">
+        <div class="popup-call__title">запишитесь на <span class="name"></span></div>
+        <form>
+            <div class="form__body">
+                <input type="hidden" name="service_name" value="">
+                <div class="form__row">
+                    <label>
+                        <span class="label">Как к вам обращаться?</span>
+                        <input type="text" name="name" placeholder="Ваше имя" class="input" required>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Контактный телефон</span>
+                        <input type="tel" name="phone" placeholder="+7 (___) ___-__-__" class="input" required>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Выберите дату</span>
+                        <div class="wrapper-data">
+                            <input data-datepicker type="text" name="" class="input " placeholder="Выбрать">
+                        </div>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Выберите время</span>
+                        <select name="form[]" data-class-modif="form">
+                            <option value="1" selected>Выбрать</option>
+                            <option value="2">Пункт №2</option>
+                            <option value="3">Пункт №3</option>
+                            <option value="4">Пункт №4</option>
+                        </select>
+                    </label>
+                </div>
+                <div class="form__row">
+                    <label>
+                        <span class="label">Комментарий</span>
+                        <textarea class="input" placeholder="Ваш текст"></textarea>
+                    </label>
+                </div>
+
+
+                <div class="form__row">
+                    <div class="form-consent">
+                        <label class="custom-checkbox">
+                            <input type="checkbox" name="personal_data_agreement" required>
+                            <span class="checkbox-box"></span>
+                            <span class="checkbox-text">
+                                Нажимая на кнопку «Записаться на прием», вы соглашаетесь на <a href="#"
+                                    target="_blank">обработку
+                                    персональных данных.</a>
+                            </span>
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn-form btn-white">Записаться на прием</button>
+            </div>
+        </form>
+    </div>
+</dialog>
