--- a/src/page-experts-single.html
+++ b/src/page-experts-single.html
@@ -12,12 +12,13 @@
             "title":"Карточка врача"
             })
             @@include('html/components/_expert-card.htm',{})
-            @@include('html/components/_expert-card-certificates.htm',{})
+            <!-- @@include('html/components/_expert-card-certificates.htm',{}) -->
             @@include('html/components/_feedback.htm',{})
             @@include('html/components/_main-contacts.htm',{})
         </main>
         @@include('html/_footer.htm',{})
     </div>
+    @@include('html/_popup.htm',{})
     @@include('html/_js.htm',{})
 </body>
 
