--- a/src/page-services-single.html
+++ b/src/page-services-single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('html/_head.htm',{
-"title":"Услуга категория"
+"title":"Услуга детальная"
 })
 
 <body>
@@ -9,9 +9,9 @@
         @@include('html/_header.htm',{})
         <main class="page">
             @@include('html/components/_breadcrumbs.htm',{
-            "title":"Услуга категория"
+            "title":"Услуга детальная"
             })
-            @@include('html/components/_services-category.htm',{})
+            @@include('html/components/_services-single.htm',{})
             @@include('html/components/_advantages.htm',{})
             @@include('html/components/_services-category-descr.htm',{})
             @@include('html/components/_service-price.htm',{})
