--- a/src/page-stories-single.html
+++ b/src/page-stories-single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('html/_head.htm',{
-"title":"Новости детальная"
+"title":"Истории детальная"
 })
 
 <body>
@@ -9,10 +9,10 @@
         @@include('html/_header.htm',{})
         <main class="page">
             @@include('html/components/_breadcrumbs.htm',{
-            "title":"Новости детальная"
+            "title":"Истории детальная"
             })
-            @@include('html/components/_news-single.htm',{
-            "title":"Новости детальная"
+            @@include('html/components/_page-stories-single.htm',{
+            "title":"Истории детальная"
             })
         </main>
         @@include('html/_footer.htm',{})
