--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
                             <li><a href="page-contacts.html" target="_blank">Контакты</a></li>
                             <li><a href="page-reviews.html" target="_blank">Отзывы</a></li>
                             <li><a href="page-works.html" target="_blank">Фото работ</a></li>
+                            <li><a href="page-about.html" target="_blank">О клинике</a></li>
+                            <li><a href="page-chart.html" target="_blank">График приема врачей</a></li>
                         </ol>
                     </div>
 
@@ -37,15 +39,18 @@
                             <li><a href="page-experts-archive.html" target="_blank">Наши врачи архивная</a></li>
                             <li><a href="page-sales-archive.html" target="_blank">Акции архивная</a></li>
                             <li><a href="page-news-archive.html" target="_blank">Новости архивная</a></li>
+                            <li><a href="page-stories-archive.html" target="_blank">Истории архивная</a></li>
                         </ol>
                     </div>
 
                     <div class="root-page__col">
                         <h2>Внутренние страницы</h2>
                         <ol>
+                            <li><a href="page-services-single.html" target="_blank">Услуга детальная</a></li>
                             <li><a href="page-experts-single.html" target="_blank">Карточка врача</a></li>
                             <li><a href="page-sales-single.html" target="_blank">Акция детальная</a></li>
                             <li><a href="page-news-single.html" target="_blank">Новости детальная</a></li>
+                            <li><a href="page-stories-single.html" target="_blank">Истории детальная</a></li>
                         </ol>
                     </div>
 
