--- a/src/page-404.html
+++ b/src/page-404.html
@@ -15,6 +15,7 @@
         </main>
         @@include('html/_footer.htm',{})
     </div>
+    @@include('html/_popup.htm',{})
     @@include('html/_js.htm',{})
 </body>
 
