--- a/src/page-chart.html
+++ b/src/page-chart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('html/_head.htm',{
-"title":"Новости детальная"
+"title":"график приема врачей"
 })
 
 <body>
@@ -9,11 +9,11 @@
         @@include('html/_header.htm',{})
         <main class="page">
             @@include('html/components/_breadcrumbs.htm',{
-            "title":"Новости детальная"
+            "title":"график приема врачей"
             })
-            @@include('html/components/_news-single.htm',{
-            "title":"Новости детальная"
-            })
+            @@include('html/components/_chart.htm',{})
+            @@include('html/components/_feedback-services.htm',{})
+            @@include('html/components/_main-contacts.htm',{})
         </main>
         @@include('html/_footer.htm',{})
     </div>
