--- a/src/page-home.html
+++ b/src/page-home.html
@@ -18,9 +18,9 @@
             @@include('html/components/_main-stories.htm',{})
             @@include('html/components/_main-contacts.htm',{})
         </main>
-
         @@include('html/_footer.htm',{})
     </div>
+    @@include('html/_popup.htm',{})
     @@include('html/_js.htm',{})
 </body>
 
