--- a/src/page-stories-archive.html
+++ b/src/page-stories-archive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('html/_head.htm',{
-"title":"Новости архивная"
+"title":"Истории архивная"
 })
 
 <body>
@@ -9,14 +9,15 @@
         @@include('html/_header.htm',{})
         <main class="page">
             @@include('html/components/_breadcrumbs.htm',{
-            "title":"Новости архивная"
+            "title":"Истории архивная"
             })
-            @@include('html/components/_news-archive.htm',{
-            "title":"Новости архивная"
+            @@include('html/components/_page-stories.htm',{
+            "title":"Истории архивная"
             })
         </main>
         @@include('html/_footer.htm',{})
     </div>
+    @@include('html/_popup.htm',{})
     @@include('html/_js.htm',{})
 </body>
 
