--- a/src/page-experts-single.html
+++ b/src/page-experts-single.html
@@ -12,7 +12,7 @@
             "title":"Карточка врача"
             })
             @@include('html/components/_expert-card.htm',{})
-            <!-- @@include('html/components/_expert-card-certificates.htm',{}) -->
+            @@include('html/components/_expert-card-certificates.htm',{})
             @@include('html/components/_feedback.htm',{})
             @@include('html/components/_main-contacts.htm',{})
         </main>
